# 2025-Advent-Of-Code

./: .gitignore  README.md  advent-of-code.cabal  aoc-hs
bench/: bench.hs
solutions/: day-1.hs  day-2.hs  day-3.hs  day-4.hs  day-5.hs  day-6.hs  test.hs
